--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ text-align: center;
 }
 
 h1 {
-text-align: start;
+text-align:initial
 background-color: darkcyan;
 font-size: 130px;
 color: orange
