--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ font-size: 20px;
 }
 
 body{
-background-color: brown;
+background-color: white;
 }
 
 h1 {
@@ -15,6 +15,5 @@ color: orange
 }
 
 #dice {
-    size: 30%;
     width: 100%;
 }
