--- a/produtos.css
+++ b/produtos.css
@@ -1,11 +1,28 @@
-<link rel="stlesheet" href="produtos.css">
-<header>
-     <div class="caixa">
-          <nav>
-               <ul>
-                <lin><a href="index.html">Home</a></lin>
-                <lin><a href="produtos.html">Produtos</a></lin>
-               </ul>
-          </nav>
-     </div>
-</header>
+header{
+    background: #BBBBBB;
+    padding: 20px 0;
+   }
+   
+   .caixa{
+   width: 940px;
+   position: relative;
+   margin: 0 auto;
+   }
+   
+   nav{position: absolute;
+       top: 110px;
+       right: 0;
+   }
+   
+    nav li{
+       display: inline;
+       margin: 0 0 0 15px;
+    }
+   
+    nav a{
+       text-transform: uppercase;
+       color: #000000;
+       font-weight: bold;
+       font-size: 22px;
+       text-decoration: none;
+    }
