--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ background-color: white;
 }
 
 h1 {
-font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+font-style: italic;
 background-color: darkcyan;
 font-size: 70px;
 color: orange
