--- a/style.css
+++ b/style.css
@@ -38,9 +38,9 @@ background-color: black;
 
 h1 {
 font-style: italic;
-background-color: darkcyan;
+background-color: grey;
 font-size: 70px;
-color: red
+color: red;
 }
 
 #dice {
