--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ header{
    }
    
     nav li{
-       display: inside;
+       display: inline;
        margin: 0 0 0 15px;
     }
    
@@ -54,6 +54,5 @@ text-align: center;
 }
 
 #logo {
-background-color: gray;
 width: 70%;
 }
